# fmi-cal-generator

./: .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
.github/workflows/: generate.yml
docs/plans/: 2026-02-23-github-actions-pages-design.md  2026-02-25-redesign-design.md  2026-02-25-redesign-implementation.md  2026-02-27-async-generation-design.md  2026-02-27-async-generation-implementation.md  2026-02-27-room-legend-design.md  2026-02-27-schedule-visualizer-design.md  2026-02-27-schedule-visualizer-implementation.md  2026-02-27-subgroup-filtering-design.md  2026-02-27-subgroup-filtering-implementation.md  2026-03-04-pwa-design.md  2026-03-04-pwa-implementation.md  2026-03-17-calendar-subscription-design.md  2026-03-17-calendar-subscription-implementation.md
scripts/: generate_all.py  generate_index.py
src/fmi_cal/: academic.py  calendar_gen.py  cli.py  config.py  models.py  scraper.py
templates/: app.js  index.html.j2  manifest.json  style.css  sw.js
tests/: test_academic.py  test_calendar_gen.py  test_scraper.py
tests/fixtures/: IE2.html  academic_calendar.html  index.html  legenda.html
worker/: package-lock.json  package.json  wrangler.toml
worker/src/: decode.js  filter.js  ics.js  index.js
worker/test/: decode.test.js  filter.test.js  ics.test.js  index.test.js
